# mcp

./: .gitignore  claude_desktop_config.json  prd.md  python-sdk.txt
mcp-server-curl/: README.md  curl-mcp-prd.md  pyproject.toml
mcp-server-curl/src/mcp_server_curl/: __init__.py  client.py  server.py
mcp-server-curl/src/mcp_server_curl/handlers/: __init__.py  firecrawl.py  ideogram.py  imagedownload.py  ollama.py  openai.py  railway.py  template.py
mcp_ffmpeg/: README.md  pyproject.toml
mcp_ffmpeg/src/mcp_ffmpeg/: __init__.py  client.py  server.py
mcp_template/: README.md  index.ts  package.json  tsconfig.json
my_1st_mcp/: README.md  pyproject.toml
my_1st_mcp/src/my_1st_mcp/: __init__.py  client.py  server.py
