[project]
name = "mcp-server-curl"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.1.1",]
[[project.authors]]
name = "chaorders1"
email = "1031luy@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-curl = "mcp_server_curl:main"
