[project]
name = "mcp-server-curl"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for executing curl commands with modular handlers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "anyio>=4.5"
]
[[project.authors]]
name = "chaorders1"
email = "1031luy@gmail.com"

[project.scripts]
mcp-server-curl = "mcp_server_curl:main"
mcp-server-curl-client = "mcp_server_curl.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_curl"]
